<package>
  <name>rl_env</name>
  <version>0.1.0</version>
  <description>Provides a set of reinforcement learning environments (gridworlds, mountain car, cart pole, stock trading, robot car simulations) for RL agents to learn in. Developed by <a href="http://www.cs.utexas.edu/~todd/">Todd Hester</a> and <a href="http://www.cs.utexas.edu/~pstone/">Peter Stone</a> at the University of Texas at Austin.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rl_env</url>

  <author email="patriotsfan@gmail.com">Todd Hester</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rl_common</build_depend>
  <build_depend>rl_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rl_common</run_depend>
  <run_depend>rl_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
