<package>
  <name>rl_suite</name>
  <version>0.1.0</version>
  <description>Reinforcement Learning framework. Repositories of agents and environments. ROS interface for reinforcement learning algorithms. Includes the TEXPLORE algorithm and real-time architecture for model-based RL. Developed by</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/reinforcement_learning</url>

  <author email="patriotsfan@gmail.com">Todd Hester</author>
  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <builtool_depend>catkin</builtool_depend>

  <!-- <run_depend>rl_agent</run_depend> -->
  <!-- <run_depend>rl_common</run_depend> -->
  <!-- <run_depend>rl_env</run_depend> -->
  <!-- <run_depend>rl_experiment</run_depend> -->
  <run_depend>rl_msgs</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
